// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-entity-field Renders \`c-entity-field\` with array value 1`] = `
<div
  class="v-input c-select-field c-lazy-search-field mt-4 v-input--is-label-active v-input--is-dirty v-input--is-focused v-input--dense theme--light v-text-field v-select v-select--chips v-select--chips--small v-select--is-multi v-autocomplete primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light primary--text"
          style="left: 0px; position: absolute;"
        >
          Entities
        </label>
        <div
          class="v-select__selections"
        >
          <span
            class="c-lazy-search-field__chip v-chip v-chip--no-color v-chip--removable theme--light v-size--small"
          >
            <span
              class="v-chip__content"
            >
              <span
                class="text-truncate"
              >
                Text
              </span>
              <button
                aria-label="Close"
                class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
                style="font-size: 18px;"
                type="button"
              >
                cancel
              </button>
            </span>
          </span>
          <span
            class="c-lazy-search-field__chip v-chip v-chip--no-color v-chip--removable theme--light v-size--small"
          >
            <span
              class="v-chip__content"
            >
              <span
                class="text-truncate"
              >
                Text 2
              </span>
              <button
                aria-label="Close"
                class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
                style="font-size: 18px;"
                type="button"
              >
                cancel
              </button>
            </span>
          </span>
          <span
            class="c-lazy-search-field__chip v-chip v-chip--no-color v-chip--removable theme--light v-size--small"
          >
            <span
              class="v-chip__content"
            >
              <span
                class="text-truncate"
              >
                Text 3
              </span>
              <button
                aria-label="Close"
                class="v-icon notranslate v-chip__close v-icon--link v-icon--right material-icons theme--light"
                style="font-size: 18px;"
                type="button"
              >
                cancel
              </button>
            </span>
          </span>
          <input
            autocomplete="off"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="entities"
          type="hidden"
          value="Text,Text 2,Text 3"
        />
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with array value 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light v-list--dense theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="c-lazy-search-field--tile v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
          Text
      </div>
      <span
        class="ml-4 grey--text"
      >
        type1
      </span>
    </div>
    <div
      aria-selected="false"
      class="c-lazy-search-field--tile v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
          Text 2
      </div>
      <span
        class="ml-4 grey--text"
      >
        type2
      </span>
    </div>
    <div
      aria-selected="false"
      class="c-lazy-search-field--tile v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
          Text 3
      </div>
      <span
        class="ml-4 grey--text"
      >
        type3
      </span>
    </div>
    <div
      class="c-lazy-search-field__append"
    />
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with custom props 1`] = `
<div
  class="v-input c-select-field c-lazy-search-field mt-4 v-input--is-label-active v-input--is-dirty v-input--is-disabled v-input--dense theme--light v-text-field v-select v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active v-label--is-disabled theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <div
          class="v-select__selections"
        >
        Text 3
          <input
            autocomplete="off"
            disabled="disabled"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-icon--disabled material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="customName"
          type="hidden"
          value="Text 3"
        />
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light v-list--dense theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      class="v-list-item theme--light"
      tabindex="-1"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          No data available
        </div>
      </div>
    </div>
    <div
      class="c-lazy-search-field__append"
    />
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with default props 1`] = `
<div
  class="v-input c-select-field c-lazy-search-field mt-4 v-input--is-focused v-input--dense theme--light v-text-field v-select v-autocomplete primary--text"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light primary--text"
          style="left: 0px; position: absolute;"
        >
          Entity
        </label>
        <div
          class="v-select__selections"
        >
          <input
            autocomplete="off"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="entities"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-field Renders \`c-entity-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content c-lazy-search-field__list"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light v-list--dense theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="c-lazy-search-field--tile v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
          id
      </div>
      <span
        class="ml-4 grey--text"
      >
        type1
      </span>
    </div>
    <div
      aria-selected="false"
      class="c-lazy-search-field--tile v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
          id 2
      </div>
      <span
        class="ml-4 grey--text"
      >
        type2
      </span>
    </div>
    <div
      aria-selected="false"
      class="c-lazy-search-field--tile v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
          id 3
      </div>
      <span
        class="ml-4 grey--text"
      >
        type3
      </span>
    </div>
    <div
      class="c-lazy-search-field__append"
    />
  </div>
</div>
`;
